Pylint fix, typing, StructPhotoGUI singleton, SpaceAwareConfigParser (handling leading and trailing spaces in config values)

--- a/config_template/structphoto.ini
+++ b/config_template/structphoto.ini
@@ -1,7 +1,8 @@
 [CONSTANTS]
 SEPARATOR: " = "
-MESSAGE_HIGHLIGHT: "---"
+MESSAGE_HIGHLIGHT: " --- "
 
 [PATHS]
 SOURCE_DIR: c:/my_photos
 TARGET_DIR: c:/my_ios_photos
+EXCLUDE_DIRS = ["iPod Photo Cache"]
